# project-k-panel

./: .env.example  .env.local.example  .gitignore  .mise.toml  ARCHITECTURE_ANALYSIS.md  AWS_DEPLOYMENT_COMPLETE.txt  CLAUDE.md  CLIENT_ONBOARDING_GUIDE.md  CURRENT_STATUS.md  DASHBOARD_READINESS_ASSESSMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_START.txt  Dockerfile  EXECUTIVE_SUMMARY.md  EXE_BUILD_LOCATION.md  INSTALLATION_SUMMARY.md  Makefile  ONBOARDING_TEST_RESULTS.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_IMPLEMENTATION_STATUS.md  PHASE4_COMPLETE.md  PROJECT_COMPLETE.md  Procfile  README.md  REGISTRATION_SYSTEM_COMPLETE.md  REGISTRATION_SYSTEM_STATUS.md  RegistrationWizard.spec  TALLY_SETUP_INTEGRATION_SUMMARY.md  TALLY_SETUP_QUICK_GUIDE.md  TallySyncAgent.spec  TallySyncService.spec  package-lock.json  package.json  pyproject.toml  requirements.txt  run_agent.py  run_service.py  test_complete_onboarding.sh
.claude/: settings.json
.github/workflows/: build-and-release.yml
agent/: __init__.py  config.py  connector.py  engine.py  main.py  orchestrator.py  poller.py  registration.py  service.py  telemetry.py  tray.py
agent/_legacy/: README.md  orchestrator.py
agent/extractor/: client.py  parser.py  watermark.py
agent/fetcher/: __init__.py  base.py  company.py  group.py  ledger.py  stock.py  voucher.py
agent/queue/: __init__.py  manager.py
agent/service/: windows_service.py
agent/setup/: tally_setup.py
agent/telemetry/: service.py  storage.py  transmitter.py
agent/transmitter/: client.py
agent/updater/: manager.py
artifacts/: README.md
cloudformation/: infrastructure.yaml
cloudplatform/: __init__.py  main.py
cloudplatform/analytics/: __init__.py
cloudplatform/api/: __init__.py  commands.py  companies.py  dashboard.py  ingest.py  (+4 more)
docs/: GOVERNANCE_LIGHTWEIGHT.md  PHASE_0-1_QUICK_START.md  PHASE_NAMING_CONVENTION.md  PHASE_TEMPLATE_PACK.md  PROJECT_GOVERNANCE.md  PROJECT_README.md  README.md  TEAM_QUICK_REFERENCE.md
docs_implementation/: PHASE4_ELK_PLAN.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE5_PRODUCTION_PLAN.md
elk/: docker-compose.yml
frontend/: package-lock.json  package.json
installer/: TallySyncAgent.iss
releases/: latest.json
scripts/: README.md  check_monitoring.sh  deploy.sh  performance_tests.sh  run_full_testing.sh  security_tests.sh  setup_deployment.sh  smoke_tests.sh
tests/: seed_e2e.py  test_e2e_roundtrip.py  test_full_pipeline.py  test_live_engine.py  test_multi_company.py  test_offline_queue.py  test_registration_service.py
(+165 files in other folders)
